--- a/NBA Data Analysis.Rmd
+++ b/NBA Data Analysis.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "NBA Data Analysis"
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "Brian Sun"
 date: "9/7/2019"
 output: html_document
